# cellrank-mcp

./: README.md  pyproject.toml
src/cellrank_mcp/: cli.py  util.py
src/cellrank_mcp/schema/: estimator.py  kernel.py  pl.py  pp.py  tl.py
src/cellrank_mcp/server/: __init__.py  estimator.py  kernel.py  pl.py  pp.py  tl.py
src/cellrank_mcp/server/preset/: estimator.py  kernel.py  pl.py  pp.py
tests/: conftest.py
