[project]
name = "cellrank-mcp"
dynamic = ["version"]
description = "Natural language interface for dynamics from multi-view scRNA-Seq analysis with cellrank through MCP."
readme = "README.md"
authors = [
    { name = "shuang", email = "hsh-me@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "fastmcp>=2.3.4",
    "scmcp-shared>=0.2.5",
    "cellrank>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
]

[project.scripts]
cellrank-mcp = "cellrank_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cellrank_mcp/__init__.py"


