[project]
name = "cellrank-mcp"
dynamic = ["version"]
description = "Natural language interface for dynamics from multi-view scRNA-Seq analysis with cellrank through MCP."
readme = "README.md"
authors = [
    { name = "shuang", email = "hsh-me@outlook.com" }
]

keywords = [
    "mcp",
    "model context protocol",
    "llm",
    "agent",
    "scRNA-seq",
    "single cell",
    "bioinformatics",
    "AI"
]


requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "fastmcp>=2.3.4",
    "nest_asyncio",
    "scmcp-shared>=0.5.0",
    "cellrank>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5",
]

[project.scripts]
cellrank-mcp = "cellrank_mcp.cli:cli.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cellrank_mcp/__init__.py"


[project.urls]
Homepage = "http://scmcphub.org/"
Repository = "https://github.com/scmcphub/cellrank-mcp"
Documentation = "https://docs.scmcphub.org/"

[tool.ruff]
lint.ignore = ["F403", "F405"]
